--- a/src/styles/component_styles/BG-Square.css
+++ b/src/styles/component_styles/BG-Square.css
@@ -1,7 +1,8 @@
 .bg-square-top {
     display: flex;
-    position: relative;
-    z-index:  0;
+    position: absolute;
+    top: 0;
+    z-index: 0;
 }
 
 .bg-square-bottom {
@@ -9,19 +10,24 @@
     position: absolute;
     right: 0;
     bottom: 0;
-
+    z-index: 0;
 }
 
 
 @media (max-width: 900px) {
-    .BG-Square {
+    .bg-square-top {
         display: flex;
+        top: 0;
+        position: absolute;
         height: 100%;
-        z-index: -1;
+        z-index: 0;
     }
 
-    .BG-Square-2 {
+    .bg-square-bottom {
         display: flex;
-        height: 100%;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: 0;
     }
 }
