--- a/src/styles/component_styles/Footer.css
+++ b/src/styles/component_styles/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
     display: flex;
-    position: fixed;
+    position: relative;
     bottom: 0;
     justify-content: center;
     align-items: center;
